<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SearchFragment"
    android:id="@+id/fragment_search">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_tool_bar"
...
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_back"/>
                <EditText
                    android:imeOptions="actionDone"
                    android:id="@+id/edtTextSearch"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_text_box"
                    android:hint="Tìm kiếm trên chợ Laptop"
                    android:inputType="text"
...
