...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtTextHome"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/search_text_box"
                            android:hint="Tìm kiếm trên chợ Laptop"
                            android:inputType="text"
...
